--- a/css/style.css
+++ b/css/style.css
@@ -435,7 +435,7 @@ nav {
           height: 306px;
           object-fit: cover; } }
   .first .slide2 {
-    height: 420px; }
+    height: 440px; }
 
 .ninth-section-carousel .owl-dots {
   position: absolute;
@@ -488,6 +488,9 @@ nav {
   opacity: 1; }
 .ninth-section-carousel .owl-dot:first-child:hover span::after {
   content: "Application and Softwere"; }
+.ninth-section-carousel .active span::before {
+  background-color: #0b0f22 !important;
+  color: #fff !important; }
 .ninth-section-carousel .owl-dot:first-child span::before {
   content: "1"; }
 .ninth-section-carousel .owl-dot:nth-child(2):hover span::after {
@@ -503,7 +506,7 @@ nav {
 .ninth-section-carousel .owl-dot:nth-child(4) span::before {
   content: "4"; }
 .ninth-section-carousel .owl-dot:nth-child(5):hover span::after {
-  content: "Security, Sistem, Network"; }
+  content: "Security, System, Network"; }
 .ninth-section-carousel .owl-dot:nth-child(5) span::before {
   content: "5"; }
 .ninth-section-carousel .owl-dot:nth-child(6):hover span::after {
@@ -633,38 +636,49 @@ nav {
         margin-right: 10px; }
   .footer .information .mail {
     text-align: center; }
-    .footer .information .mail input {
-      background: #0e0b17;
-      color: #eee;
-      float: left;
-      border: none;
-      height: 40px;
-      width: 75%;
-      padding: 0 15px;
-      outline: none;
-      border-top-left-radius: 4px;
-      border-top-right-radius: 0;
-      border-bottom-right-radius: 0;
-      border-bottom-left-radius: 0; }
-    .footer .information .mail button {
-      background: #3c3947;
-      color: #fff;
-      border: none;
-      width: 25%;
-      height: 40px;
-      outline: none;
-      border-top-right-radius: 4px; }
-    .footer .information .mail form textarea {
-      line-height: 2em;
-      resize: none;
-      border-top-left-radius: 0;
-      border-top-right-radius: 0;
-      padding-top: 50px;
-      text-align: center;
-      height: 140px; }
-  .footer .information .social img {
-    width: 120px;
-    margin: 10px 0; }
+    .footer .information .mail .valid-input {
+      position: relative; }
+      .footer .information .mail .valid-input span.validetta-inline--bottom {
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        top: 21px; }
+      .footer .information .mail .valid-input input {
+        background: #0e0b17;
+        color: #eee;
+        float: left;
+        border: none;
+        height: 40px;
+        width: 75%;
+        padding: 0 15px;
+        outline: none;
+        border-top-left-radius: 4px;
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+        border-bottom-left-radius: 0; }
+      .footer .information .mail .valid-input button {
+        background: #3c3947;
+        color: #fff;
+        border: none;
+        width: 25%;
+        height: 40px;
+        outline: none;
+        border-top-right-radius: 4px; }
+    .footer .information .mail .form-group {
+      position: relative; }
+      .footer .information .mail .form-group textarea {
+        line-height: 2em;
+        resize: none;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+        padding-top: 50px;
+        text-align: center;
+        height: 140px; }
+      .footer .information .mail .form-group span.validetta-inline--bottom {
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        top: 65%; }
   .footer .information .fa-phone {
     color: red; }
     .footer .information .fa-phone:before {
@@ -683,6 +697,9 @@ nav {
         font-size: 24px;
         width: 25px;
         text-align: center; }
+    .footer .information p .con-A {
+      font-size: 14px;
+      color: #8e8b8b; }
 
 .footer-logo {
   padding: 15px; }
@@ -851,7 +868,8 @@ nav {
   .tabs .container .tab-content #menu1 .footer-tab .footimg {
     padding: 0; }
     .tabs .container .tab-content #menu1 .footer-tab .footimg img {
-      width: 100%; }
+      width: 100%;
+      height: 330px; }
   @media (min-width: 767px) {
     .tabs .container .tab-content #menu2 .col-text {
       padding: 50px 20px; } }
@@ -991,7 +1009,7 @@ nav {
     height: 40px;
     align-items: center;
     color: #fff;
-    margin: 10px auto;
+    margin: 3px auto;
     padding: 10px; }
   .tabs .container .nav-tabs > li.active > a > span, .tabs .container .nav-tabs > li.active > a > span:focus, .tabs .container .nav-tabs > li.active > a > span:hover {
     color: #000;
@@ -1011,6 +1029,9 @@ nav {
     margin: 80px 0 0 0; }
     .tabs .container .test1 li {
       padding: 0; }
+      @media (min-width: 768px) {
+        .tabs .container .test1 li {
+          width: 12.5%; } }
       .tabs .container .test1 li a {
         text-align: center;
         margin: 0;
@@ -1100,7 +1121,13 @@ nav {
     .adducation .info .form-col-wrapper {
       padding: 0; }
       .adducation .info .form-col-wrapper .form-input-group-m1 {
+        position: relative;
         margin-bottom: 0; }
+        .adducation .info .form-col-wrapper .form-input-group-m1 span.validetta-inline--bottom {
+          position: absolute;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          top: 50%; }
         .adducation .info .form-col-wrapper .form-input-group-m1 > div {
           padding-left: 0;
           padding-right: 0; }
@@ -1222,16 +1249,23 @@ nav {
     .adducation .send-mail .mail {
       text-align: center;
       padding: 80px 0; }
-      .adducation .send-mail .mail .form-group textarea {
-        height: 150px;
-        resize: none;
-        min-width: 250px;
-        padding: 63px 0;
-        text-align: center;
-        border-top: 1px solid;
-        border-left: 1px solid;
-        font-style: italic;
-        border-radius: 0; }
+      .adducation .send-mail .mail .form-group {
+        position: relative; }
+        .adducation .send-mail .mail .form-group span.validetta-inline--bottom {
+          position: absolute;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          top: 65%; }
+        .adducation .send-mail .mail .form-group textarea {
+          height: 150px;
+          resize: none;
+          min-width: 250px;
+          padding: 63px 0;
+          text-align: center;
+          border-top: 1px solid;
+          border-left: 1px solid;
+          font-style: italic;
+          border-radius: 0; }
       .adducation .send-mail .mail button {
         font-style: italic;
         color: #fff;
@@ -1278,17 +1312,19 @@ nav {
   .reqruipment .accordion-toggle {
     font-style: italic;
     color: #fff;
-    background-image: -moz-linear-gradient(0deg, #090b1a 0%, #1d224a 100%);
-    background-image: -webkit-linear-gradient(0deg, #090b1a 0%, #1d224a 100%);
-    background-image: -ms-linear-gradient(0deg, #090b1a 0%, #1d224a 100%);
+    background-image: -moz-linear-gradient(0deg, #090b1a 0%, rgba(29, 34, 74, 0.67) 100%);
+    background-image: -webkit-linear-gradient(0deg, #090b1a 0%, rgba(29, 34, 74, 0.67) 100%);
+    background-image: -ms-linear-gradient(0deg, #090b1a 0%, rgba(29, 34, 74, 0.67) 100%);
     padding: 4px 0;
     outline: none;
-    transition: all 0.5s;
+    transition: all 5s;
     border-color: #141834;
     margin-bottom: 5px;
     width: 100%; }
     .reqruipment .accordion-toggle:hover {
-      margin-top: 3px; }
+      background-image: -moz-linear-gradient(0deg, #090b1a 0%, rgba(29, 34, 74, 0.67) 100%);
+      background-image: -webkit-linear-gradient(0deg, #090b1a 0%, rgba(29, 34, 74, 0.67) 100%);
+      background-image: -ms-linear-gradient(0deg, #090b1a 0%, rgba(29, 34, 74, 0.67) 100%); }
     @media (max-width: 470px) {
       .reqruipment .accordion-toggle {
         font-size: 12px;
@@ -1305,6 +1341,10 @@ nav {
       /* adjust as needed */
       margin: 0 30px;
       font-style: normal; }
+  .reqruipment button.collapsed {
+    background-image: -moz-linear-gradient(0deg, #090b1a 0%, #1d224a 100%);
+    background-image: -webkit-linear-gradient(0deg, #090b1a 0%, #1d224a 100%);
+    background-image: -ms-linear-gradient(0deg, #090b1a 0%, #1d224a 100%); }
   .reqruipment .accordion-toggle.collapsed:after {
     /* symbol for "collapsed" panels */
     content: "\e080";
@@ -1406,7 +1446,13 @@ nav {
       .reqruipment .tab-content #demo .form-col-wrapper .form-col-wrapper .form-input-group-m1 .form-input-addon, .reqruipment .tab-content #demo1 .form-col-wrapper .form-col-wrapper .form-input-group-m1 .form-input-addon, .reqruipment .tab-content #demo3 .form-col-wrapper .form-col-wrapper .form-input-group-m1 .form-input-addon, .reqruipment .tab-content #demo4 .form-col-wrapper .form-col-wrapper .form-input-group-m1 .form-input-addon, .reqruipment .tab-content #demo5 .form-col-wrapper .form-col-wrapper .form-input-group-m1 .form-input-addon, .reqruipment .tab-content #demo6 .form-col-wrapper .form-col-wrapper .form-input-group-m1 .form-input-addon {
         text-align: left; }
       .reqruipment .tab-content #demo .form-col-wrapper .form-col-wrapper .form-group, .reqruipment .tab-content #demo1 .form-col-wrapper .form-col-wrapper .form-group, .reqruipment .tab-content #demo3 .form-col-wrapper .form-col-wrapper .form-group, .reqruipment .tab-content #demo4 .form-col-wrapper .form-col-wrapper .form-group, .reqruipment .tab-content #demo5 .form-col-wrapper .form-col-wrapper .form-group, .reqruipment .tab-content #demo6 .form-col-wrapper .form-col-wrapper .form-group {
+        position: relative;
         text-align: center; }
+        .reqruipment .tab-content #demo .form-col-wrapper .form-col-wrapper .form-group span.validetta-inline--bottom, .reqruipment .tab-content #demo1 .form-col-wrapper .form-col-wrapper .form-group span.validetta-inline--bottom, .reqruipment .tab-content #demo3 .form-col-wrapper .form-col-wrapper .form-group span.validetta-inline--bottom, .reqruipment .tab-content #demo4 .form-col-wrapper .form-col-wrapper .form-group span.validetta-inline--bottom, .reqruipment .tab-content #demo5 .form-col-wrapper .form-col-wrapper .form-group span.validetta-inline--bottom, .reqruipment .tab-content #demo6 .form-col-wrapper .form-col-wrapper .form-group span.validetta-inline--bottom {
+          position: absolute;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          top: 50%; }
         .reqruipment .tab-content #demo .form-col-wrapper .form-col-wrapper .form-group .input-group .input-group-addon, .reqruipment .tab-content #demo1 .form-col-wrapper .form-col-wrapper .form-group .input-group .input-group-addon, .reqruipment .tab-content #demo3 .form-col-wrapper .form-col-wrapper .form-group .input-group .input-group-addon, .reqruipment .tab-content #demo4 .form-col-wrapper .form-col-wrapper .form-group .input-group .input-group-addon, .reqruipment .tab-content #demo5 .form-col-wrapper .form-col-wrapper .form-group .input-group .input-group-addon, .reqruipment .tab-content #demo6 .form-col-wrapper .form-col-wrapper .form-group .input-group .input-group-addon {
           padding: 2px 10px;
           font-size: 12px; }
